<?xml version="1.0"?>
<package format="2">
  <name>genisys_imu</name>
  <version>1.0.0</version>
  <description>The genisys_imu ros package by Anman Technology</description>


  <maintainer email="wuttipat.cho@anman.co.th">Liew Wuttipat</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/genisys_imu</url> -->
  <url type="repository">https://github.com/AnmanTechnology/genisys_imu</url>
  <url type="bugtracker">https://github.com/AnmanTechnology/genisys_imu/issues</url>

  <author email="wuttipat.cho@anman.co.th">Liew Wuttipat</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>imu_tools</build_depend>
  <build_depend>geometry2</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>imu_tools</build_export_depend>
  <build_export_depend>geometry2</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
